# neomovies-api

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  WEBTORRENT_PLAYER.md  build.sh  clean.sh  docker-compose.yml  go.mod  go.sum  main.go  netlify.toml  openapi.yaml  package-lock.json  package.json  render.yaml  run.sh  supporters-list.json  vercel.json
api/: index.go  index.rs
docs/: docs.go  docusaurus.config.ts  index.md  package.json  sidebars.ts  swagger.json  swagger.yaml
docs/.vitepress/: config.mts
docs/docs/: deployment.md  getting-started.md  intro.md
docs/guide/: configuration.md  deploy-vercel.md  quickstart.md
docs/reference/: auth.md  endpoints.md  models.md  openapi.md  overview.md
docs/static/: openapi.yaml
internal/api/: handlers.go  init.go  models.go  utils.go
internal/tmdb/: client.go  models.go
netlify/functions/: api.go
pkg/config/: config.go  vars.go
pkg/database/: connection.go
pkg/handlers/: auth.go  auth_helpers.go  categories.go  client_parser.go  docs.go  favorites.go  health.go  images.go  lang_helper.go  movie.go  neoid.go  players.go  reactions.go  search.go  support.go  torrents.go  tv.go  unified.go  unified_helpers.go  webhook.go  webtorrent.go
pkg/middleware/: auth.go
pkg/models/: favorite.go  movie.go  unified.go  user.go
pkg/monitor/: monitor.go
pkg/players/: iframevideo.go  rgshows.go  types.go
scripts/: build-docs.sh  vercel-build.sh
src/: config.rs  db.js  index.js  lib.rs  response.rs  server.rs
src/auth/: jwt.rs
tests/: prop_sync_progress.rs
(+67 files in other folders)
