[package]
name = "neomovies-api"
version = "2.0.1"
edition = "2021"

[lib]
name = "neomovies_api"
path = "src/lib.rs"

[[bin]]
name = "index"
path = "api/index.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
vercel_runtime = "2.1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = { version = "3", features = ["bson-3"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "gzip", "brotli", "deflate", "query"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10.0"
hex = "0.4"
futures-util = "0.3"
http-body-util = "0.1"
axum = { version = "0.8.8", features = ["json"] }
dotenvy = "0.15"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
http = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
